fixed spacing

--- a/styles/Books.module.scss
+++ b/styles/Books.module.scss
@@ -4,7 +4,7 @@
   margin: 5rem 0rem;
   padding: 0 0rem 0 12rem;
   @include small-screen {
-    padding: 0 6rem 0 6rem;
+    padding: 0 4rem 0 4rem;
   }
   h1 {
     text-align: center;
@@ -35,6 +35,9 @@
       align-items: center;
       div {
         margin-right: 4rem;
+        @include small-screen {
+          margin-right: 1rem;
+        }
       }
     }
     .pod {
