--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -2,7 +2,7 @@
 .main {
   padding: 1rem 12rem 2rem 12rem;
   @include small-screen {
-    padding: 1rem 6rem 1rem 6rem;
+    padding: 1rem 4rem 1rem 4rem;
   }
   .bigText {
     text-align: center;
