--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -7,7 +7,7 @@
   font-size: 1.8rem;
   padding: 2rem 10rem 2rem 6rem;
   @include small-screen {
-    padding: 7rem 5rem;
+    padding: 7rem 3rem;
   }
 
   .navLinks {
