--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   padding: 0 12rem 0 12rem;
   @include small-screen {
-    padding: 0 6rem 0 6rem;
+    padding: 0 4rem 0 4rem;
   }
 
   .subhead {
